--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://pjakubowski220:Jotpe200@cluster0.82c2s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://pjakubowski220:Jotpe200@cluster0.82c2s.mongodb.net/chess_game?retryWrites=true&w=majority&appName=Cluster0
